# gregmetral

./: README.md
Nouveau dossier/site-arret-dessin-master/php/: adherent.php  dessins.php  index.php  modification.php  modification_output.php  post.php
Nouveau dossier/site-arret-dessin-master/sql/: dessin_bdd.sql
Tetris/: README
Tetris/src/piecetype/: I.java  J.java  L.java  O.java  S.java  T.java  Z.java
Tetris/src/tetris/: Game.java  GamePanel.java  GameThread.java  MainMenu.java  Panel.java  Pieces.java
allegra/: README
allegra/src/GUI/: EndingMenu.java  GameGUI.java  Menu.java
allegra/src/allegra/: Card.java  DiscardPile.java  DrawPile.java  GameManager.java  Pile.java  PlayerMatrix.java
allegra/src/tools/: tools.java
site-arret-dessin-master/: README.txt  Rapport de projet.docx  mise_en_place_xampp.txt
site-arret-dessin-master/php/: connexion.php  connexion_output.php  cours.php  demande.php  envoie_mail.php  inscription.php  inscription_output.php  styles.css
src/: CMakeCache.txt  CMakeLists.txt  Humidity.cpp  Humidity.hpp  Light.cpp  Light.hpp  Pression.cpp  Pression.hpp  Scheduler.cpp  Scheduler.hpp  Sensor.cpp  Sensor.hpp  Server.cpp  Server.hpp  Temperature.cpp  Temperature.hpp  main.cpp
unity assets  3 games in one/Scenes/: MainMenu.unity
unity assets  3 games in one/apple/Apple Catcher/Scripts/: AppleScript.cs  Player_Script.cs  SpawnerScript.cs  Title_Script.cs
unity assets  3 games in one/apple/Scenes/: AppleCatcher.unity
unity assets  3 games in one/main menu/Menu Assets/: MainMenu.cs
(+37 files in other folders)
